--- a/RaceReviewer/RaceReviewer.csproj
+++ b/RaceReviewer/RaceReviewer.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\netkeibaLib\netkeibaLib.csproj" />
   </ItemGroup>
 
